tests/snapshots/run_wpt_conformance__trtx_slice_float16_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slice float16 3D tensor",
    "trtx",
    "PASS",
)
